--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -19,6 +19,6 @@ jobs:
       - name: Run RuboCop
         run: |
           diff_sha=$(git rev-parse "origin/${{ github.base_ref }}")
-          rubocop app lib spec | ./bin/reviewdog -f=rubocop -diff="git diff $diff_sha" -reporter=github-pr-check
+          rubocop . | ./bin/reviewdog -f=rubocop -diff="git diff $diff_sha" -reporter=github-pr-check
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.github_token }}
